WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246687
[Nicosia] AsyncScrolling: lock/unlock layers for hit testing is not implemented
https://bugs.webkit.org/show_bug.cgi?id=246687
Summary
[Nicosia] AsyncScrolling: lock/unlock layers for hit testing is not implemented
Carlos Garcia Campos
Reported
2022-10-18 07:34:12 PDT
It's only implemented for mac platform, we can just move it to ThreadedScrollingTrree.
Attachments
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2022-10-18 07:36:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5493
EWS
Comment 2
2022-10-19 01:32:01 PDT
Committed
255722@main
(248bd5dfd870): <
https://commits.webkit.org/255722@main
> Reviewed commits have been landed. Closing PR #5493 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-10-19 01:33:20 PDT
<
rdar://problem/101328325
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug