[Nicosia] AsyncScrolling: lock/unlock layers for hit testing is not implemented https://bugs.webkit.org/show_bug.cgi?id=246687

Reviewed by Žan Doberšek and Simon Fraser.

It's only implemented for mac platform, we can just move it to ThreadedScrollingTree.

* Source/WebCore/page/scrolling/ThreadedScrollingTree.cpp:
(WebCore::ThreadedScrollingTree::lockLayersForHitTesting):
(WebCore::ThreadedScrollingTree::unlockLayersForHitTesting):
* Source/WebCore/page/scrolling/ThreadedScrollingTree.h:
* Source/WebCore/page/scrolling/mac/ScrollingTreeMac.h:
* Source/WebCore/page/scrolling/mac/ScrollingTreeMac.mm:
(ScrollingTreeMac::lockLayersForHitTesting): Deleted.
(ScrollingTreeMac::unlockLayersForHitTesting): Deleted.
* Source/WebCore/page/scrolling/nicosia/ScrollingTreeNicosia.cpp:
(WebCore::ScrollingTreeNicosia::scrollingNodeForPoint):

Canonical link: https://commits.webkit.org/255722@main